Make tagline less annoying on mobile

--- a/src/static/styles/main.scss
+++ b/src/static/styles/main.scss
@@ -12,8 +12,8 @@ a {
   background-color: #60B5CC;
   color: #FFFFFF;
 
-  small {
-    color: #FFFFFF;
+  h2 {
+    color: #34495E;
   }
 
   .btn-primary {
